Update index.html (sync BiB)

--- a/index.html
+++ b/index.html
@@ -167,14 +167,14 @@
 <tr><th scope="row">BHD<span class="arrow">-&gt;</span>SM</td><td>182&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr><th scope="row">BHD<span class="arrow">-&gt;</span>THD</td><td>182&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr class="spacer"></tr>
-<tr><td colspan="3">Bibliotik (BiB)<br>Invite forum unlocks with Power User user class: either 1GB upload and 100 torrents uploaded, or 10GB upload and 10 torrents uploaded, 1.05 ratio, 2 weeks account age.</td></tr>
-<tr><th scope="row">BiB<span class="arrow">-&gt;</span>AB</td><td>365&nbsp;days</td><td>12 months account age.</td></tr>
+<tr><td colspan="3">Bibliotik (BiB)<br>Invite forum unlocks with Power User+ user class: 1GB upload and 100 torrents uploaded, or 10GB upload and 10 torrents uploaded, 1.05 ratio, 2 weeks account age.</td></tr>
+<tr><th scope="row">BiB<span class="arrow">-&gt;</span>AB</td><td>365&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr><th scope="row">BiB<span class="arrow">-&gt;</span>FL</td><td>14&nbsp;days</td><td>No additional requirements.</td></tr>
-<tr><th scope="row">BiB<span class="arrow">-&gt;</span>GGn</td><td>90&nbsp;days</td><td>3 months account age.</td></tr>
-<tr><th scope="row">BiB<span class="arrow">-&gt;</span>LzTr</td><td>365&nbsp;days</td><td>12 months account age.</td></tr>
-<tr><th scope="row">BiB<span class="arrow">-&gt;</span>OPS</td><td>14&nbsp;days</td><td>No additional requirements.</td></tr>
-<tr><th scope="row">BiB<span class="arrow">-&gt;</span>RFX</td><td>365&nbsp;days</td><td>12 months account age.</td></tr>
-<tr><th scope="row">BiB<span class="arrow">-&gt;</span>SceneHD</td><td>365&nbsp;days</td><td>12 months account age.</td></tr>
+<tr><th scope="row">BiB<span class="arrow">-&gt;</span>GGn</td><td>365&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr><th scope="row">BiB<span class="arrow">-&gt;</span>LzTr</td><td>14&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr><th scope="row">BiB<span class="arrow">-&gt;</span>OPS</td><td>91&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr><th scope="row">BiB<span class="arrow">-&gt;</span>RFX</td><td>365&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr><th scope="row">BiB<span class="arrow">-&gt;</span>SceneHD</td><td>365&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr class="spacer"></tr>
 <tr><td colspan="3">Blutopia (BLU)<br>Invite forum unlocks with BluExtremist or BluSeeder<br>BluExtremist: 20TB upload, 3 months account age.<br>BluSeeder: 5TB seedsize, 30 days average seedtime, 1 month account age.</td></tr>
 <tr><th scope="row">BLU<span class="arrow">-&gt;</span>Aither</td><td>30&nbsp;days</td><td>No data yet.</td></tr>
