Update index.html (sync BG, BS, Bit-HDTV)

--- a/index.html
+++ b/index.html
@@ -176,6 +176,12 @@
 <tr><th scope="row">BiB<span class="arrow">-&gt;</span>RFX</td><td>365&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr><th scope="row">BiB<span class="arrow">-&gt;</span>SceneHD</td><td>365&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr class="spacer"></tr>
+<tr><td colspan="3">BitGamer (BG)<br>No invite forum.</td></tr>
+<tr class="spacer"></tr>
+<tr><td colspan="3">BitSpyder (BS)<br>No invite forum.</td></tr>
+<tr class="spacer"></tr>
+<tr><td colspan="3">Bit-HDTV<br>Awaiting someone to add.</td></tr>
+<tr class="spacer"></tr>
 <tr><td colspan="3">Blutopia (BLU)<br>Invite forum unlocks with BluExtremist or BluSeeder<br>BluExtremist: 20TB upload, 3 months account age.<br>BluSeeder: 5TB seedsize, 30 days average seedtime, 1 month account age.</td></tr>
 <tr><th scope="row">BLU<span class="arrow">-&gt;</span>Aither</td><td>30&nbsp;days</td><td>No data yet.</td></tr>
 <tr><th scope="row">BLU<span class="arrow">-&gt;</span>DT</td><td>30&nbsp;days</td><td>No data yet.</td></tr>
