Update index.html (sync BLU)

--- a/index.html
+++ b/index.html
@@ -182,12 +182,13 @@
 <tr class="spacer"></tr>
 <tr><td colspan="3">Bit-HDTV<br>Awaiting someone to add.</td></tr>
 <tr class="spacer"></tr>
-<tr><td colspan="3">Blutopia (BLU)<br>Invite forum unlocks with BluExtremist or BluSeeder<br>BluExtremist: 20TB upload, 3 months account age.<br>BluSeeder: 5TB seedsize, 30 days average seedtime, 1 month account age.</td></tr>
-<tr><th scope="row">BLU<span class="arrow">-&gt;</span>Aither</td><td>30&nbsp;days</td><td>No data yet.</td></tr>
-<tr><th scope="row">BLU<span class="arrow">-&gt;</span>DT</td><td>30&nbsp;days</td><td>No data yet.</td></tr>
-<tr><th scope="row">BLU<span class="arrow">-&gt;</span>FL</td><td>30&nbsp;days</td><td>No data yet.</td></tr>
-<tr><th scope="row">BLU<span class="arrow">-&gt;</span>OPS</td><td>30&nbsp;days</td><td>No data yet.</td></tr>
-<tr><th scope="row">BLU<span class="arrow">-&gt;</span>THD</td><td>30&nbsp;days</td><td>No data yet.</td></tr>
+<tr><td colspan="3">Blutopia (BLU)<br>Invite forum unlocks with BluExtremist+ or BluSeeder+ user class.<br><br>
+BluExtremist user class: 20TB upload, 3 months account age.<br>BluSeeder user class: 5TB seedsize, 1 month average seed time, 1 month account age.</td></tr>
+<tr><th scope="row">BLU<span class="arrow">-&gt;</span>Aither</td><td>30/91&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr><th scope="row">BLU<span class="arrow">-&gt;</span>DT</td><td>30/91&nbsp;days</td><td>0.25 ratio.</td></tr>
+<tr><th scope="row">BLU<span class="arrow">-&gt;</span>IMT</td><td>30/91&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr><th scope="row">BLU<span class="arrow">-&gt;</span>OPS</td><td>30/91&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr><th scope="row">BLU<span class="arrow">-&gt;</span>OE</td><td>30/91&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr class="spacer"></tr>
 <tr><td colspan="3">BroadcasTheNet (BTN)<br>No requirement data yet.</td></tr>
 <tr><th scope="row">BTN<span class="arrow">-&gt;</span>AB</td><td>30&nbsp;days</td><td>No data yet.</td></tr>
