Update index.html (sync BtW)

--- a/index.html
+++ b/index.html
@@ -190,6 +190,8 @@ BluExtremist user class: 20TB upload, 3 months account age.<br>BluSeeder user cl
 <tr><th scope="row">BLU<span class="arrow">-&gt;</span>OPS</td><td>30/91&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr><th scope="row">BLU<span class="arrow">-&gt;</span>OE</td><td>30/91&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr class="spacer"></tr>
+<tr><td colspan="3">BreatheTheWord (BtW)<br>Awaiting someone to add.</td></tr>
+<tr class="spacer"></tr>
 <tr><td colspan="3">BroadcasTheNet (BTN)<br>No requirement data yet.</td></tr>
 <tr><th scope="row">BTN<span class="arrow">-&gt;</span>AB</td><td>30&nbsp;days</td><td>No data yet.</td></tr>
 <tr><th scope="row">BTN<span class="arrow">-&gt;</span>ACM</td><td>30&nbsp;days</td><td>No data yet.</td></tr>
