Update index.html (sync BTN)

--- a/index.html
+++ b/index.html
@@ -192,19 +192,34 @@ BluExtremist user class: 20TB upload, 3 months account age.<br>BluSeeder user cl
 <tr class="spacer"></tr>
 <tr><td colspan="3">BreatheTheWord (BtW)<br>Awaiting someone to add.</td></tr>
 <tr class="spacer"></tr>
-<tr><td colspan="3">BroadcasTheNet (BTN)<br>No requirement data yet.</td></tr>
-<tr><th scope="row">BTN<span class="arrow">-&gt;</span>AB</td><td>30&nbsp;days</td><td>No data yet.</td></tr>
-<tr><th scope="row">BTN<span class="arrow">-&gt;</span>ACM</td><td>30&nbsp;days</td><td>No data yet.</td></tr>
-<tr><th scope="row">BTN<span class="arrow">-&gt;</span>BiB</td><td>30&nbsp;days</td><td>No data yet.</td></tr>
-<tr><th scope="row">BTN<span class="arrow">-&gt;</span>BLU</td><td>30&nbsp;days</td><td>No data yet.</td></tr>
-<tr><th scope="row">BTN<span class="arrow">-&gt;</span>GGn</td><td>30&nbsp;days</td><td>No data yet.</td></tr>
-<tr><th scope="row">BTN<span class="arrow">-&gt;</span>MAM</td><td>30&nbsp;days</td><td>No data yet.</td></tr>
-<tr><th scope="row">BTN<span class="arrow">-&gt;</span>OPS</td><td>30&nbsp;days</td><td>No data yet.</td></tr>
-<tr><th scope="row">BTN<span class="arrow">-&gt;</span>PTN</td><td>30&nbsp;days</td><td>No data yet.</td></tr>
-<tr><th scope="row">BTN<span class="arrow">-&gt;</span>PTP</td><td>30&nbsp;days</td><td>No data yet.</td></tr>
-<tr><th scope="row">BTN<span class="arrow">-&gt;</span>PxHD</td><td>30&nbsp;days</td><td>No data yet.</td></tr>
-<tr><th scope="row">BTN<span class="arrow">-&gt;</span>RED</td><td>30&nbsp;days</td><td>No data yet.</td></tr>
-<tr><th scope="row">BTN<span class="arrow">-&gt;</span>UHDB</td><td>30&nbsp;days</td><td>No data yet.</td></tr>
+<tr><td colspan="3">BroadcasTheNet (BTN)<br>Invite forum unlocks with Power User+ user class: 250GB upload/download, 250 snatches (upload/download), 250000 bonus points, 4 weeks account age.<br><br>Master+ user class: Awaiting someone to add.<br>Guru+ user class: Awaiting someone to add.</td></tr>
+<tr><th scope="row">BTN<span class="arrow">-&gt;</span>Aither</td><td>28&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr><th scope="row">BTN<span class="arrow">-&gt;</span>AB</td><td>28&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr><th scope="row">BTN<span class="arrow">-&gt;</span>ANT</td><td>28&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr><th scope="row">BTN<span class="arrow">-&gt;</span>ACM</td><td>28&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr><th scope="row">BTN<span class="arrow">-&gt;</span>AZ</td><td>28&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr><th scope="row">BTN<span class="arrow">-&gt;</span>BBT</td><td>28&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr><th scope="row">BTN<span class="arrow">-&gt;</span>BHD</td><td>28&nbsp;days</td><td>Guru+ user class.</td></tr>
+<tr><th scope="row">BTN<span class="arrow">-&gt;</span>CanalStreet</td><td>28&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr><th scope="row">BTN<span class="arrow">-&gt;</span>CCS</td><td>28&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr><th scope="row">BTN<span class="arrow">-&gt;</span>GGn</td><td>28&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr><th scope="row">BTN<span class="arrow">-&gt;</span>FF</td><td>28&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr><th scope="row">BTN<span class="arrow">-&gt;</span>HDB</td><td>730&nbsp;days</td><td>Master+ user class, 5 months average seed time or 2 months average seed time and 2TB upload.</td></tr>
+<tr><th scope="row">BTN<span class="arrow">-&gt;</span>HDF</td><td>28&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr><th scope="row">BTN<span class="arrow">-&gt;</span>IMT</td><td>28&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr><th scope="row">BTN<span class="arrow">-&gt;</span>Lat-Team</td><td>28&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr><th scope="row">BTN<span class="arrow">-&gt;</span>LzTr</td><td>28&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr><th scope="row">BTN<span class="arrow">-&gt;</span>MAM</td><td>28&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr><th scope="row">BTN<span class="arrow">-&gt;</span>NBL</td><td>28&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr><th scope="row">BTN<span class="arrow">-&gt;</span>OPS</td><td>28&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr><th scope="row">BTN<span class="arrow">-&gt;</span>PTP</td><td>730&nbsp;days</td><td>Master+ user class.</td></tr>
+<tr><th scope="row">BTN<span class="arrow">-&gt;</span>PxC</td><td>28&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr><th scope="row">BTN<span class="arrow">-&gt;</span>PxHD</td><td>28&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr><th scope="row">BTN<span class="arrow">-&gt;</span>RED</td><td>28&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr><th scope="row">BTN<span class="arrow">-&gt;</span>SM</td><td>28&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr><th scope="row">BTN<span class="arrow">-&gt;</span>TG</td><td>28&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr><th scope="row">BTN<span class="arrow">-&gt;</span>TL</td><td>28&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr><th scope="row">BTN<span class="arrow">-&gt;</span>UHD</td><td>28&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr class="spacer"></tr>
 <tr><td colspan="3">Cinemageddon (CG)<br>Invite forum unlocks with Superfan user class: 200GB upload, 20GB download, 1.5 ratio.</td></tr>
 <tr><th scope="row">CG<span class="arrow">-&gt;</span>Aither</td><td>30&nbsp;days</td><td>No additional requirements.</td></tr>
