--- a/index.html
+++ b/index.html
@@ -221,6 +221,10 @@ BluExtremist user class: 20TB upload, 3 months account age.<br>BluSeeder user cl
 <tr><th scope="row">BTN<span class="arrow">-&gt;</span>TL</td><td>28&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr><th scope="row">BTN<span class="arrow">-&gt;</span>UHD</td><td>28&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr class="spacer"></tr>
+<tr><td colspan="3">Broad City (BdC)<br>Awaiting someone to add.</td></tr>
+	<tr><th scope="row">BdC<span class="arrow">-&gt;</span>Aither</td><td>121&nbsp;days</td><td>Gold user+ user class, 2 other tracker profiles.</td></tr>
+	<tr><th scope="row">BdC<span class="arrow">-&gt;</span>THD</td><td>?&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr class="spacer"></tr>
 <tr><td colspan="3">Cinemageddon (CG)<br>Invite forum unlocks with Superfan user class: 200GB upload, 20GB download, 1.5 ratio.</td></tr>
 <tr><th scope="row">CG<span class="arrow">-&gt;</span>Aither</td><td>30&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr><th scope="row">CG<span class="arrow">-&gt;</span>ANT</td><td>30&nbsp;days</td><td>No additional requirements.</td></tr>
