--- a/index.html
+++ b/index.html
@@ -227,6 +227,10 @@ BluExtremist user class: 20TB upload, 3 months account age.<br>BluSeeder user cl
 <tr class="spacer"></tr>
 <tr><td colspan="3">BwTorrents (BwT)<br>Awaiting someone to add.</td></tr>
 <tr class="spacer"></tr>
+<tr><td colspan="3">CartoonChaos (CC)<br>Invite forum unlocks with Power User+ user class: 50GB upload, 10GB download, 4 weeks account age.</td></tr>
+	<tr><th scope="row">CC<span class="arrow">-&gt;</span>NBL</td><td>28&nbsp;days</td><td>Found in the <i>TtN Unlimited Invites</i> thread.</td></tr>
+	<tr><th scope="row">CC<span class="arrow">-&gt;</span>TK</td><td>28&nbsp;days</td><td>Positive ratio.</td></tr>
+<tr class="spacer"></tr>
 <tr><td colspan="3">Cinemageddon (CG)<br>Invite forum unlocks with Superfan user class: 200GB upload, 20GB download, 1.5 ratio.</td></tr>
 <tr><th scope="row">CG<span class="arrow">-&gt;</span>Aither</td><td>30&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr><th scope="row">CG<span class="arrow">-&gt;</span>ANT</td><td>30&nbsp;days</td><td>No additional requirements.</td></tr>
