Update index.html (sync CRT)

--- a/index.html
+++ b/index.html
@@ -231,6 +231,11 @@ BluExtremist user class: 20TB upload, 3 months account age.<br>BluSeeder user cl
 	<tr><th scope="row">CC<span class="arrow">-&gt;</span>NBL</td><td>28&nbsp;days</td><td>Found in the <i>TtN Unlimited Invites</i> thread.</td></tr>
 	<tr><th scope="row">CC<span class="arrow">-&gt;</span>TK</td><td>28&nbsp;days</td><td>Positive ratio.</td></tr>
 <tr class="spacer"></tr>
+<tr><td colspan="3">Cathode-Ray.Tube (CRT)<br>Invite forum unlocks with Analog Ace+ user class: 5TB upload, 5 torrents uploaded, 20 forum posts, 1.5 ratio, 16 weeks account age.</td></tr>
+	<tr><th scope="row">CRT<span class="arrow">-&gt;</span>Aither</td><td>112&nbsp;days</td><td>No additional requirements.</td></tr>
+	<tr><th scope="row">CRT<span class="arrow">-&gt;</span>HUNO</td><td>112&nbsp;days</td><td>No additional requirements.</td></tr>
+	<tr><th scope="row">CRT<span class="arrow">-&gt;</span>iAnon</td><td>112&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr class="spacer"></tr>
 <tr><td colspan="3">Cinemageddon (CG)<br>Invite forum unlocks with Superfan user class: 200GB upload, 20GB download, 1.5 ratio.</td></tr>
 <tr><th scope="row">CG<span class="arrow">-&gt;</span>Aither</td><td>30&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr><th scope="row">CG<span class="arrow">-&gt;</span>ANT</td><td>30&nbsp;days</td><td>No additional requirements.</td></tr>
