Update index.html (sync CG)

--- a/index.html
+++ b/index.html
@@ -236,20 +236,20 @@ BluExtremist user class: 20TB upload, 3 months account age.<br>BluSeeder user cl
 	<tr><th scope="row">CRT<span class="arrow">-&gt;</span>HUNO</td><td>112&nbsp;days</td><td>No additional requirements.</td></tr>
 	<tr><th scope="row">CRT<span class="arrow">-&gt;</span>iAnon</td><td>112&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr class="spacer"></tr>
-<tr><td colspan="3">Cinemageddon (CG)<br>Invite forum unlocks with Superfan user class: 200GB upload, 20GB download, 1.5 ratio.</td></tr>
+<tr><td colspan="3">Cinemageddon (CG)<br>Invite forum unlocks with Superfan+ user class: 200GB upload, 20GB download, 1.5 ratio.</td></tr>
 <tr><th scope="row">CG<span class="arrow">-&gt;</span>Aither</td><td>30&nbsp;days</td><td>No additional requirements.</td></tr>
-<tr><th scope="row">CG<span class="arrow">-&gt;</span>ANT</td><td>30&nbsp;days</td><td>No additional requirements.</td></tr>
-<tr><th scope="row">CG<span class="arrow">-&gt;</span>BdC</td><td>60&nbsp;days</td><td>2 months account age.</td></tr>
-<tr><th scope="row">CG<span class="arrow">-&gt;</span>GPW</td><td>30&nbsp;days</td><td>10 torrents uploaded.</td></tr>
+<tr><th scope="row">CG<span class="arrow">-&gt;</span>BdC</td><td>60&nbsp;days</td><td>Power user+ user class.</td></tr>
+<tr><th scope="row">CG<span class="arrow">-&gt;</span>GPW</td><td>30&nbsp;days</td><td>Power user+ user class, 10 torrents uploaded.</td></tr>
 <tr><th scope="row">CG<span class="arrow">-&gt;</span>JPTV.club</td><td>30&nbsp;days</td><td>1.0 ratio.</td></tr>
 <tr><th scope="row">CG<span class="arrow">-&gt;</span>MAM</td><td>30&nbsp;days</td><td>No additional requirements.</td></tr>
-<tr><th scope="row">CG<span class="arrow">-&gt;</span>NBL</td><td>30&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr><th scope="row">CG<span class="arrow">-&gt;</span>OPS</td><td>182&nbsp;days</td><td>1.5 ratio, 6 months account age.</td></tr>
 <tr><th scope="row">CG<span class="arrow">-&gt;</span>PTF</td><td>30&nbsp;days</td><td>No additional requirements.</td></tr>
-<tr><th scope="row">CG<span class="arrow">-&gt;</span>SpeedApp</td><td>30&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr><th scope="row">CG<span class="arrow">-&gt;</span>SG</td><td>30&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr><th scope="row">CG<span class="arrow">-&gt;</span>SpeedApp</td><td>30&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr><th scope="row">CG<span class="arrow">-&gt;</span>THD</td><td>30&nbsp;days</td><td>No additional requirements.</td></tr>
-<tr><th scope="row">CG<span class="arrow">-&gt;</span>UHDB</td><td>365&nbsp;days</td><td>12 months account age.</td></tr>
+<tr><th scope="row">CG<span class="arrow">-&gt;</span>TS</td><td>30&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr><th scope="row">CG<span class="arrow">-&gt;</span>TG</td><td>30&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr><th scope="row">CG<span class="arrow">-&gt;</span>UHDB</td><td>365&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr class="spacer"></tr>
 <tr><td colspan="3">Dolphin Is Coming (DIC)<br>Invite forum unlocks with Power User user class: 25GB upload, 1.05 ratio, 5 torrents uploaded, 2 weeks account age.</td></tr>
 <tr><th scope="row">DIC<span class="arrow">-&gt;</span>BTSchool</td><td>14&nbsp;days</td><td>No additional requirements.</td></tr>
