Update index.html (sync CZ)

--- a/index.html
+++ b/index.html
@@ -251,6 +251,11 @@ BluExtremist user class: 20TB upload, 3 months account age.<br>BluSeeder user cl
 <tr><th scope="row">CG<span class="arrow">-&gt;</span>TG</td><td>30&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr><th scope="row">CG<span class="arrow">-&gt;</span>UHDB</td><td>365&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr class="spacer"></tr>
+<tr><td colspan="3">CinemaZ (CZ)<br>Self-invite unlocks at 300GB upload, 2.0 ratio, seeding 5 torrents, no Hit & Runs, 4 months account age (or V.I.P.), and costs 10,000 BP per invite with a 1 month cool-down.</td></tr>
+<tr><th scope="row">CZ<span class="arrow">-&gt;</span>AZ</td><td>121&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr><th scope="row">CZ<span class="arrow">-&gt;</span>EZ</td><td>121&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr><th scope="row">CZ<span class="arrow">-&gt;</span>PHD</td><td>121&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr class="spacer"></tr>
 <tr><td colspan="3">Dolphin Is Coming (DIC)<br>Invite forum unlocks with Power User user class: 25GB upload, 1.05 ratio, 5 torrents uploaded, 2 weeks account age.</td></tr>
 <tr><th scope="row">DIC<span class="arrow">-&gt;</span>BTSchool</td><td>14&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr><th scope="row">DIC<span class="arrow">-&gt;</span>BYRBT</td><td>14&nbsp;days</td><td>No additional requirements.</td></tr>
