--- a/index.html
+++ b/index.html
@@ -256,6 +256,18 @@ BluExtremist user class: 20TB upload, 3 months account age.<br>BluSeeder user cl
 <tr><th scope="row">CZ<span class="arrow">-&gt;</span>EZ</td><td>121&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr><th scope="row">CZ<span class="arrow">-&gt;</span>PHD</td><td>121&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr class="spacer"></tr>
+<tr><td colspan="3">CGPeers (CGP)<br>Awaiting someone to add.</td></tr>
+<tr class="spacer"></tr>
+<tr><td colspan="3">Concertos (CCT)<br>Awaiting someone to add.</td></tr>
+<tr class="spacer"></tr>
+<tr><td colspan="3">DajiaoPT<br>Awaiting someone to add.</td></tr>
+<tr class="spacer"></tr>
+<tr><td colspan="3">DanishBytes (DBy)<br>Awaiting someone to add.</td></tr>
+<tr class="spacer"></tr>
+<tr><td colspan="3">DigitalCore Club (DCC)<br>No invite forum.</td></tr>
+<tr class="spacer"></tr>
+<tr><td colspan="3">Docspedia<br>No invite forum.</td></tr>
+<tr class="spacer"></tr>
 <tr><td colspan="3">Dolphin Is Coming (DIC)<br>Invite forum unlocks with Power User user class: 25GB upload, 1.05 ratio, 5 torrents uploaded, 2 weeks account age.</td></tr>
 <tr><th scope="row">DIC<span class="arrow">-&gt;</span>BTSchool</td><td>14&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr><th scope="row">DIC<span class="arrow">-&gt;</span>BYRBT</td><td>14&nbsp;days</td><td>No additional requirements.</td></tr>
