Update index.html (sync DIC)

--- a/index.html
+++ b/index.html
@@ -268,18 +268,18 @@ BluExtremist user class: 20TB upload, 3 months account age.<br>BluSeeder user cl
 <tr class="spacer"></tr>
 <tr><td colspan="3">Docspedia<br>No invite forum.</td></tr>
 <tr class="spacer"></tr>
-<tr><td colspan="3">Dolphin Is Coming (DIC)<br>Invite forum unlocks with Power User user class: 25GB upload, 1.05 ratio, 5 torrents uploaded, 2 weeks account age.</td></tr>
+<tr><td colspan="3">Dolphin Is Coming (DIC)<br>Invite forum unlocks with Power User+ user class: 25GB upload, 1.05 ratio, 5 torrents uploaded, 2 weeks account age.</td></tr>
 <tr><th scope="row">DIC<span class="arrow">-&gt;</span>BTSchool</td><td>14&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr><th scope="row">DIC<span class="arrow">-&gt;</span>BYRBT</td><td>14&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr><th scope="row">DIC<span class="arrow">-&gt;</span>GPW</td><td>14&nbsp;days</td><td>No additional requirements.</td></tr>
-<tr><th scope="row">DIC<span class="arrow">-&gt;</span>HD4FANS</td><td>14&nbsp;days</td><td>15GB download. 30 torrents snatched. 10 lossless torrents uploaded. 1.2 ratio.</td></tr>
-<tr><th scope="row">DIC<span class="arrow">-&gt;</span>HDArea</td><td>14&nbsp;days</td><td>10 torrents uploaded. 4 weeks account age.</td></tr>
-<tr><th scope="row">DIC<span class="arrow">-&gt;</span>HDSky</td><td>14&nbsp;days</td><td>30GB download. 20 torrents uploaded. 1.2 ratio. 3 months account age.</td></tr>
+<tr><th scope="row">DIC<span class="arrow">-&gt;</span>HD4FANS</td><td>14&nbsp;days</td><td>15GB download, 30 torrents snatched, 10 lossless torrents uploaded, 1.2 ratio.</td></tr>
+<tr><th scope="row">DIC<span class="arrow">-&gt;</span>HDArea</td><td>28&nbsp;days</td><td>10 torrents uploaded.</td></tr>
+<tr><th scope="row">DIC<span class="arrow">-&gt;</span>HDSky</td><td>91&nbsp;days</td><td>30GB download, 20 torrents uploaded, 1.2 ratio.</td></tr>
 <tr><th scope="row">DIC<span class="arrow">-&gt;</span>HTPT</td><td>14&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr><th scope="row">DIC<span class="arrow">-&gt;</span>LeagueHD</td><td>14&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr><th scope="row">DIC<span class="arrow">-&gt;</span>NPUPT</td><td>14&nbsp;days</td><td>No additional requirements.</td></tr>
-<tr><th scope="row">DIC<span class="arrow">-&gt;</span>PTer</td><td>14&nbsp;days</td><td>3 months account age.</td></tr>
-<tr><th scope="row">DIC<span class="arrow">-&gt;</span>U2</td><td>14&nbsp;days</td><td>5 lossless anime torrents uploaded. 3 weeks account age.</td></tr>
+<tr><th scope="row">DIC<span class="arrow">-&gt;</span>PTer</td><td>91&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr><th scope="row">DIC<span class="arrow">-&gt;</span>U2</td><td>21&nbsp;days</td><td>5 lossless anime torrents uploaded.</td></tr>
 <tr class="spacer"></tr>
 <tr><td colspan="3">Empornium (Emp)<br>Invite forum unlocks with Great Perv user class: 100GB upload, 1.05 ratio, 5 torrents uploaded, 8 weeks account age.<br><br>Sextreme Perv: 1TB upload, 1.05 ratio, 50 torrents uploaded, 13 weeks account age.</td></tr>
 <tr><th scope="row">Emp<span class="arrow">-&gt;</span>AB</td><td>365&nbsp;days</td><td>Sextreme Perv user class. 12 months account age.</td></tr>
