Update index.html (sync EZ)

--- a/index.html
+++ b/index.html
@@ -295,6 +295,11 @@ BluExtremist user class: 20TB upload, 3 months account age.<br>BluSeeder user cl
 <tr class="spacer"></tr>
 <tr><td colspan="3">eShareNet<br>Awaiting someone to add.</td></tr>
 <tr class="spacer"></tr>
+<tr><td colspan="3">ExoticaZ (EZ)<br>Self-invite unlocks at 300GB upload, 2.0 ratio, seeding 5 torrents, no Hit & Runs, 4 months account age (or V.I.P.), and costs 10,000 BP per invite with a 1 month cool-down.</td></tr>
+<tr><th scope="row">EZ<span class="arrow">-&gt;</span>AZ</td><td>121&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr><th scope="row">EZ<span class="arrow">-&gt;</span>CZ</td><td>121&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr><th scope="row">EZ<span class="arrow">-&gt;</span>PHD</td><td>121&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr class="spacer"></tr>
 <tr><td colspan="3">Filelist.io (FL)<br>Invite forum unlocks with VIP purchase (monetary or bonus points).<br><br>Elite user class: 4TB upload, 5.0 ratio, 4 years account age.</td></tr>
 <tr><th scope="row">FL<span class="arrow">-&gt;</span>Aither</td><td>365&nbsp;days</td><td>1 year account age.</td></tr>
 <tr><th scope="row">FL<span class="arrow">-&gt;</span>BLU</td><td>1460&nbsp;days</td><td>Elite user class.</td></tr>
