Update index.html (sync FL)

--- a/index.html
+++ b/index.html
@@ -302,16 +302,16 @@ BluExtremist user class: 20TB upload, 3 months account age.<br>BluSeeder user cl
 <tr class="spacer"></tr>
 <tr><td colspan="3">FearNoPeer (FNP)<br>No invite forum.</td></tr>
 <tr class="spacer"></tr>
-<tr><td colspan="3">Filelist.io (FL)<br>Invite forum unlocks with VIP purchase (monetary or bonus points).<br><br>Elite user class: 4TB upload, 5.0 ratio, 4 years account age.</td></tr>
-<tr><th scope="row">FL<span class="arrow">-&gt;</span>Aither</td><td>365&nbsp;days</td><td>1 year account age.</td></tr>
-<tr><th scope="row">FL<span class="arrow">-&gt;</span>BLU</td><td>1460&nbsp;days</td><td>Elite user class.</td></tr>
-<tr><th scope="row">FL<span class="arrow">-&gt;</span>CG</td><td>1825&nbsp;days</td><td>Other tracker profiles. 5 years account age.</td></tr>
-<tr><th scope="row">FL<span class="arrow">-&gt;</span>CRT</td><td>365&nbsp;days</td><td>1.0 ratio. 1 year account age.</td></tr>
-<tr><th scope="row">FL<span class="arrow">-&gt;</span>iAnon</td><td>1460&nbsp;days</td><td>Elite user class.</td></tr>
+<tr><td colspan="3">FileList (FL)<br>Invite forum unlocks with VIP (donation or bought for 3000 FLCoins) or Elite+ user class: 4TB upload, 5.0 ratio, 4 years account age.</td></tr>
+<tr><th scope="row">FL<span class="arrow">-&gt;</span>Aither</td><td>365&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr><th scope="row">FL<span class="arrow">-&gt;</span>CG</td><td>1826&nbsp;days</td><td>Other tracker profiles.</td></tr>
+<tr><th scope="row">FL<span class="arrow">-&gt;</span>CRT</td><td>365&nbsp;days</td><td>1.0 ratio.</td></tr>
+<tr><th scope="row">FL<span class="arrow">-&gt;</span>iAnon</td><td>365&nbsp;days</td><td>1.4 ratio.</td></tr>
 <tr><th scope="row">FL<span class="arrow">-&gt;</span>Milkie</td><td>1&nbsp;days</td><td>No additional requirements.</td></tr>
-<tr><th scope="row">FL<span class="arrow">-&gt;</span>NBL</td><td>365&nbsp;days</td><td>1 year account age.</td></tr>
-<tr><th scope="row">FL<span class="arrow">-&gt;</span>Portugas</td><td>1&nbsp;days</td><td>No additional requirements.</td></tr>
-<tr><th scope="row">FL<span class="arrow">-&gt;</span>PTer</td><td>180&nbsp;days</td><td>6 months account age.</td></tr>
+<tr><th scope="row">FL<span class="arrow">-&gt;</span>MusicTorrents</td><td>1&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr><th scope="row">FL<span class="arrow">-&gt;</span>NBL</td><td>365&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr><th scope="row">FL<span class="arrow">-&gt;</span>Portugas</td><td>1&nbsp;days</td><td>2 tracker profiles (FL included).</td></tr>
+<tr><th scope="row">FL<span class="arrow">-&gt;</span>PTer</td><td>182&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr class="spacer"></tr>
 <tr><td colspan="3">GazelleGames.net (GGn)<br>Invite forum unlocks with Pro Gamer user class. All user classes are gained with achievement points.<br>Additional invite forum unlocks with Legendary Gamer user class.</td></tr>
 <tr><th scope="row">GGn<span class="arrow">-&gt;</span>AB</td><td>180&nbsp;days</td><td>Elite Gamer user class. 6 months account age.</td></tr>
