Update index.html (days fix)

--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@ BluExtremist user class: 20TB upload, 3 months account age.<br>BluSeeder user cl
 <tr class="spacer"></tr>
 <tr><td colspan="3">Broad City (BdC)<br>Awaiting someone to add.</td></tr>
 	<tr><th scope="row">BdC<span class="arrow">-&gt;</span>Aither</td><td>121&nbsp;days</td><td>Gold user+ user class, 2 other tracker profiles.</td></tr>
-	<tr><th scope="row">BdC<span class="arrow">-&gt;</span>THD</td><td>?&nbsp;days</td><td>No additional requirements.</td></tr>
+	<tr><th scope="row">BdC<span class="arrow">-&gt;</span>THD</td><td>1&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr class="spacer"></tr>
 <tr><td colspan="3">BwTorrents (BwT)<br>Awaiting someone to add.</td></tr>
 <tr class="spacer"></tr>
@@ -237,18 +237,18 @@ BluExtremist user class: 20TB upload, 3 months account age.<br>BluSeeder user cl
 	<tr><th scope="row">CRT<span class="arrow">-&gt;</span>iAnon</td><td>112&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr class="spacer"></tr>
 <tr><td colspan="3">Cinemageddon (CG)<br>Invite forum unlocks with Superfan+ user class: 200GB upload, 20GB download, 1.5 ratio.</td></tr>
-<tr><th scope="row">CG<span class="arrow">-&gt;</span>Aither</td><td>30&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr><th scope="row">CG<span class="arrow">-&gt;</span>Aither</td><td>1&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr><th scope="row">CG<span class="arrow">-&gt;</span>BdC</td><td>60&nbsp;days</td><td>Power user+ user class.</td></tr>
-<tr><th scope="row">CG<span class="arrow">-&gt;</span>GPW</td><td>30&nbsp;days</td><td>Power user+ user class, 10 torrents uploaded.</td></tr>
-<tr><th scope="row">CG<span class="arrow">-&gt;</span>JPTV.club</td><td>30&nbsp;days</td><td>1.0 ratio.</td></tr>
-<tr><th scope="row">CG<span class="arrow">-&gt;</span>MAM</td><td>30&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr><th scope="row">CG<span class="arrow">-&gt;</span>GPW</td><td>1&nbsp;days</td><td>Power user+ user class, 10 torrents uploaded.</td></tr>
+<tr><th scope="row">CG<span class="arrow">-&gt;</span>JPTV.club</td><td>1&nbsp;days</td><td>1.0 ratio.</td></tr>
+<tr><th scope="row">CG<span class="arrow">-&gt;</span>MAM</td><td>1&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr><th scope="row">CG<span class="arrow">-&gt;</span>OPS</td><td>182&nbsp;days</td><td>1.5 ratio, 6 months account age.</td></tr>
-<tr><th scope="row">CG<span class="arrow">-&gt;</span>PTF</td><td>30&nbsp;days</td><td>No additional requirements.</td></tr>
-<tr><th scope="row">CG<span class="arrow">-&gt;</span>SG</td><td>30&nbsp;days</td><td>No additional requirements.</td></tr>
-<tr><th scope="row">CG<span class="arrow">-&gt;</span>SpeedApp</td><td>30&nbsp;days</td><td>No additional requirements.</td></tr>
-<tr><th scope="row">CG<span class="arrow">-&gt;</span>THD</td><td>30&nbsp;days</td><td>No additional requirements.</td></tr>
-<tr><th scope="row">CG<span class="arrow">-&gt;</span>TS</td><td>30&nbsp;days</td><td>No additional requirements.</td></tr>
-<tr><th scope="row">CG<span class="arrow">-&gt;</span>TG</td><td>30&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr><th scope="row">CG<span class="arrow">-&gt;</span>PTF</td><td>1&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr><th scope="row">CG<span class="arrow">-&gt;</span>SG</td><td>1&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr><th scope="row">CG<span class="arrow">-&gt;</span>SpeedApp</td><td>1&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr><th scope="row">CG<span class="arrow">-&gt;</span>THD</td><td>1&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr><th scope="row">CG<span class="arrow">-&gt;</span>TS</td><td>1&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr><th scope="row">CG<span class="arrow">-&gt;</span>TG</td><td>1&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr><th scope="row">CG<span class="arrow">-&gt;</span>UHDB</td><td>365&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr class="spacer"></tr>
 <tr><td colspan="3">CinemaZ (CZ)<br>Self-invite unlocks at 300GB upload, 2.0 ratio, seeding 5 torrents, no Hit & Runs, 4 months account age (or V.I.P.), and costs 10,000 BP per invite with a 1 month cool-down.</td></tr>
