Update index.html (sync FF)

--- a/index.html
+++ b/index.html
@@ -313,6 +313,8 @@ BluExtremist user class: 20TB upload, 3 months account age.<br>BluSeeder user cl
 <tr><th scope="row">FL<span class="arrow">-&gt;</span>Portugas</td><td>1&nbsp;days</td><td>2 tracker profiles (FL included).</td></tr>
 <tr><th scope="row">FL<span class="arrow">-&gt;</span>PTer</td><td>182&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr class="spacer"></tr>
+<tr><td colspan="3">FunFile (FF)<br>Awaiting someone to add.</td></tr>
+<tr class="spacer"></tr>
 <tr><td colspan="3">GazelleGames.net (GGn)<br>Invite forum unlocks with Pro Gamer user class. All user classes are gained with achievement points.<br>Additional invite forum unlocks with Legendary Gamer user class.</td></tr>
 <tr><th scope="row">GGn<span class="arrow">-&gt;</span>AB</td><td>180&nbsp;days</td><td>Elite Gamer user class. 6 months account age.</td></tr>
 <tr><th scope="row">GGn<span class="arrow">-&gt;</span>Aither</td><td>30&nbsp;days</td><td>No additional requirements.</td></tr>
